fix: podSecurityContext is missing runAsUser: 1000

--- a/charts/draupnir/values.yaml
+++ b/charts/draupnir/values.yaml
@@ -30,6 +30,7 @@ podSecurityContext:
       - ALL
   readOnlyRootFilesystem: true
   runAsNonRoot: true
+  runAsUser: 1000
   runAsGroup: 1000
 
 securityContext:
